Commit do meu test 1

--- a/SistemaBancario/.classpath
+++ b/SistemaBancario/.classpath
@@ -9,5 +9,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="D:/OneDrive/CUURSOS/Testes automáticos + curso completo de teste de software/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="D:/OneDrive/CUURSOS/Testes automáticos + curso completo de teste de software/junit-4.12.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
